# prompt-injection-detector

./: README.md  pyproject.toml
.github/workflows/: security.yml
docs/: explainer-script.md  use-cases.md
src/: cli.py  detector.py
tests/: test_detector.py  test_main.py
